# src/models/auth.model.ts
@@ -8,32 +8,25 @@ import {
 import { executeQuery } from "../utils/helper";
 
 export const createOTP = async (data: createOtp) => {
-  const { mobile, add_mobile, email, country_code, otp, expires_at } = data;
+  const { mobile, email, country_code, otp, expires_at } = data;
 
-  if (!mobile && !add_mobile && !email) {
-    throw new Error("mobile or add_mobile or email is required");
+  if (!mobile && !email) {
+    throw new Error("mobile  or email is required");
   }
 
   const query = `
     INSERT INTO otp 
-    (mobile, add_mobile, email, country_code, otp, expires_at, is_used)
-    VALUES (?, ?, ?, ?, ?, ?, 0)
+    (mobile,  email, country_code, otp, expires_at, is_used)
+    VALUES (?, ?,  ?, ?, ?, 0)
   `;
 
-  const params = [
-    mobile || null,
-    add_mobile || null,
-    email || null,
-    country_code,
-    otp,
-    expires_at,
-  ];
+  const params = [mobile || null, email || null, country_code, otp, expires_at];
 
   return executeQuery(query, params);
 };
 
 export const getValiOTP = async (data: RequestOtps) => {
-  const { country_code, mobile, otp, email, add_mobile } = data;
+  const { country_code, mobile, otp, email } = data;
 
   let query = `
     SELECT id, expires_at, is_used 
@@ -46,9 +39,6 @@ export const getValiOTP = async (data: RequestOtps) => {
   if (mobile) {
     query += ` AND country_code = ? AND mobile = ?`;
     params.push(country_code, mobile);
-  } else if (add_mobile) {
-    query += ` AND country_code = ? AND add_mobile = ?`;
-    params.push(country_code, add_mobile);
   } else if (email) {
     query += ` AND email = ?`;
     params.push(email);
